src/index.css
* {
  font-family: sans-serif;
  color: #333;
}

header > h1 {
  margin: 10px 0px;
}

.stamp-tour {
  position: relative;
  height: 100vh;
}

.map {
  height: 100%;
  width: 100%;
}

.side-bar {
  position: absolute;
  top: 15px;
  right: 15px;
  width: 230px;
  height: 80%;
  padding: 15px 30px;
  background-color: white;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
  border-radius: 10px;
  z-index: 1000;
  overflow-y: auto;
}

.spot-list {
  list-style: none;
  padding: 0;
}

.spot-box {
  border: 2px solid #8d4ba7;
  padding: 0px 15px;
  margin-bottom: 10px;
  border-radius: 10px;
}

.help {
  font-size: medium;
  border: 1px solid #333;
  padding: 2px 10px;
  margin: 10px;
  border-radius: 15px;
}

.number {
  color: #8d4ba7;
  font-size: medium;
  border: 1px solid #8d4ba7;
  padding: 5px 12px;
  margin: 10px;
  border-radius: 20px;
}

li > h3 {
  color: #8d4ba7;
  font-size: medium;
}

.final-spot {
  text-align: center;
  color: white;
  background-color: #8d4ba7;
}

